Migrated the JVM/desktop implementation from the legacy JNI-based `bleCommon` and `blejavaadvertise` modules to the new Kotlin Multiplatform (KMP) `bt_common` and `ble-advertise` architecture. migration is not fully done yet most of the part is working though
- Added the `kdroidfilter.nucleus` plugin and migrated the desktop application configuration from `compose.desktop` to `nucleus.application`.

- Added a Gradle helper `setupNativePathForMingw` to automatically inject compiled native MinGW `.dll` directories into the system `PATH` when executing tests or running the application on Windows.

- **Bluetooth Info & Status Refactoring:**
  Replaced legacy static `BluetoothInfoProvider` references with instances of `PlatformBTInfoProvider` using extension properties (`isBTActive`, `isLEConnectionAvailable`, `isPeripheralRoleSupported`).

- **GATT Server & Advertising Updates:**
  Migrated `BLEAdvertisementCallback` to implement the new suspend-based `BLEAdvertiserListener` interface, replacing `String` representations of UUIDs with standard Kotlin `Uuid` types.