@@ -1,5 +1,8 @@
 import com.codingfeline.buildkonfig.compiler.FieldSpec
-import org.jetbrains.compose.desktop.application.dsl.TargetFormat
+import io.github.kdroidfilter.nucleus.desktop.application.dsl.TargetFormat
+import org.gradle.internal.os.OperatingSystem
+import org.jetbrains.kotlin.gradle.dsl.KotlinMultiplatformExtension
+import org.jetbrains.kotlin.gradle.plugin.mpp.KotlinNativeTarget
 
 plugins {
     alias(libs.plugins.androidMultiplatformLibrary)
@@ -11,11 +14,14 @@ plugins {
     alias(libs.plugins.androidx.room)
     alias(libs.plugins.kotlinx.serialization)
     alias(libs.plugins.build.konfig)
+    alias(libs.plugins.kdroidfilter.nucleus)
 }
+
+val currentOs: OperatingSystem = OperatingSystem.current()
 
 kotlin {
 
-    jvmToolchain(25)
+    jvmToolchain(22)
 
     android {
         namespace = "com.sam.bluepad.library"
@@ -68,6 +74,7 @@ kotlin {
             //di
             implementation(libs.koin.core)
             implementation(libs.koin.compose)
+            implementation(libs.koin.viewmodel)
             implementation(libs.koin.compose.viewmodel)
             implementation(libs.koin.compose.nav3)
             // navigation
@@ -118,9 +125,13 @@ kotlin {
             implementation(libs.kable.exceptions)
 
             // local modules
-            implementation(projects.jvmCore.bleCommon)
+            implementation(projects.jvmCore.btCommon)
             implementation(projects.jvmCore.bleAdvertise)
             implementation(projects.jvmCore.cryptoBridge)
+
+            // kdroid
+            implementation(libs.kdroidfilter.decorated.window)
+            implementation(libs.kdroidfilter.decorated.window.material3)
         }
         jvmTest.dependencies {
             implementation(compose.desktop.currentOs)
@@ -135,6 +146,7 @@ kotlin {
         optIn.add("androidx.compose.material3.ExperimentalMaterial3ExpressiveApi")
     }
 }
+
 
 room {
     schemaDirectory("$projectDir/schemas")
@@ -152,16 +164,25 @@ dependencies {
     "androidRuntimeClasspath"(libs.androidx.ui.tooling.preview)
 }
 
-compose.desktop {
-    application {
-        mainClass = "com.sam.bluepad.MainKt"
+nucleus.application {
+    mainClass = "com.sam.bluepad.MainKt"
 
-        nativeDistributions {
-            // no osx or linux target for now
-            val targets = arrayOf(TargetFormat.Msi)
-            targetFormats(*targets)
-            packageName = "com.sam.bluepad"
-            packageVersion = "1.0.0"
+    jvmArgs += listOf(
+        "--enable-native-access=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio=ALL-UNNAMED",
+        "-Dsun.misc.unsafe.allow=true",
+    )
+
+    nativeDistributions {
+        // no osx or linux target for now
+        targetFormats(TargetFormat.Msi, TargetFormat.AppX)
+        packageName = "com.sam.bluepad"
+        packageVersion = "1.0.0"
+
+        windows {
+            console = false
+            perUserInstall = true
+            dirChooser = true
         }
     }
 }
@@ -189,4 +210,35 @@ buildkonfig {
         buildConfigField(FieldSpec.Type.STRING, "APP_ID", "e1e55e42-bb6c-4410-94e4-a2cc2e628c05")
         buildConfigField(FieldSpec.Type.BOOLEAN, "IS_DEBUG", "true")
     }
+}
+
+if (currentOs.isWindows) {
+    tasks.withType<Test>().configureEach { setupNativePathForMingw() }
+    tasks.withType<JavaExec>().configureEach { setupNativePathForMingw() }
+}
+
+/**
+ * We need to set the paths for the native library as our library will be dependent on another `.dll`
+ * file we need to provide the path for all
+ */
+fun Task.setupNativePathForMingw() {
+    if (!currentOs.isWindows) return
+
+    val binDirs = mutableListOf<String>()
+
+    for (subproject in rootProject.subprojects) {
+        if (!subproject.path.startsWith(":jvm-core")) continue
+        val kotlinExp = subproject.extensions.findByType<KotlinMultiplatformExtension>()
+        val targets = kotlinExp?.targets ?: continue
+        val mingwTarget = targets.findByName("mingwX64") as? KotlinNativeTarget
+        mingwTarget?.binaries?.forEach { binary ->
+            binDirs.add(binary.outputFile.parentFile.absolutePath)
+        }
+    }
+
+    val existingPath = System.getenv("PATH") ?: ""
+    val newPath = (binDirs.distinct() + existingPath.split(";"))
+        .distinct().joinToString(";")
+
+    if (this is ProcessForkOptions) environment("PATH", newPath)
 }
